# wayland-scanner-plus

./: CMakeLists.txt  template.cc  test-client.cc  wayland-client-core.hpp  wayland-client.hpp  wayland-egl-helper.hpp  wayland-scanner-plus-template.cc  wayland-scanner-plus.cc  weston-desktop-client.hpp
utilities/: misc.cc  misc.hpp  uuid.cc  uuid.hpp
